--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -983,6 +983,10 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.bg-color-dark-blue{
+  background-color: #18405A;
+}
+
 .hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
